deploy: fdada3c3a58b4af8ce90b89ba547d316d59cd665

--- a/0.Introduction/index.html
+++ b/0.Introduction/index.html
@@ -115,13 +115,21 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="introduction">Introduction</h1>
-<p><em>TODO: Describe the problem</em></p>
-<p>With this specification,
-the SWHID workgroup has created
-a reference format
-so that they may be used and shared in a common format
-with the goal of eliminating conversions,
-saving time, and improving data accuracy.</p>
+<p>Modern software relies heavily on open source components that are developed
+collaboratively in a distributed setting, and that are assembled to create
+complex systems that evolve at a fast pace.</p>
+<p>This has strenghtened the need to precisely track, ensure availability, and
+guarantee integrity of the components that go into a given system for a variety
+of stakeholders. Academia needs to ensure that research results are
+reproducible, industry needs to improve the traceability of the software supply
+chain, developer communities need tools to cope with the increasing complexity.</p>
+<p>A key building block for addressing this issue is a system of <em>intrinsic</em>
+identifiers that allows to precisely pinpoint the exact version of any software
+artefact, at all levels of granularity, <em>without relying</em> on any central registry
+or naming authority.</p>
+<p>With this specification, the SWHID working group makes such a system of
+intrinsic identifiers, originally developed for the Software Heritage
+universal source code archive, available to all stakeholder.</p>
               
             </div>
           </div><footer>
