deploy: cba800cdb8ca69e2a5537277e82e4e6d685869cf

--- a/0.Introduction/index.html
+++ b/0.Introduction/index.html
@@ -130,6 +130,11 @@ or naming authority.</p>
 <p>With this specification, the SWHID working group makes such a system of
 intrinsic identifiers, originally developed for the Software Heritage
 universal source code archive, available to all stakeholder.</p>
+<p>For the sake of clarity, we will use examples drawn directly from the Software
+Heritage archive, but notice that systems for persistent archival of software
+artefacts, as well as resolution of SWHIDs are out of the scope of this
+specification, and the SWHID specification does not require in any way the
+use of Software Heritage.</p>
               
             </div>
           </div><footer>
