deploy: 5e59e8e9516dbb5bed05499d15cca824fba8e867

--- a/3.Terms_and_definitions/index.html
+++ b/3.Terms_and_definitions/index.html
@@ -126,12 +126,16 @@ for use in standardization at the following addresses:</p>
   available at <a href="http://www.electropedia.org/">http://www.electropedia.org/</a></li>
 </ul>
 <p><strong>3.1</strong></p>
+<p><strong>branch</strong></p>
+<p>its definition</p>
 <p><strong>git</strong></p>
 <p>its definition</p>
 <p><strong>hierarchical file system</strong></p>
 <p>its definition</p>
 <p><strong>intrinsic identifier</strong></p>
 <p>An identifier that can be computed directly from the object that it identifies, without needing a registry. Typical examples are cryptographically strong hashes.</p>
+<p><strong>repository</strong></p>
+<p>its definition</p>
 <p><strong>sha1_git</strong></p>
 <p>its definition</p>
 <p><strong>version control system</strong></p>
