--- a/A.Conformance/index.html
+++ b/A.Conformance/index.html
@@ -121,7 +121,7 @@
                 <h1 id="annex-a-conformance-informative">Annex A Conformance (Informative)</h1>
 <h2 id="a1-current-and-previous-versions">A.1 Current and Previous Versions</h2>
 <p>This edition has the version number 1.2 as part of its title.
-Although this is the first ISO edition of the SWHID Specification,
+Although this is the first edition of the SWHID Specification as a Publicly Available Standard,
 earlier editions of the specification were published
 by the Software Heritage.
 Differences between this edition and earlier ones
