deploy: a4365751aabb6ad19fd855c79b1bd73c833b7011

--- a/1.Scope/index.html
+++ b/1.Scope/index.html
@@ -115,7 +115,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="1-scope">1 Scope</h1>
-<p>This SoftWare Heritage persistent IDentifiers (SWHIDs) specification
+<p>This SoftWare Hash IDentifier (SWHID) specification
 defines a standard data format for referencing digital artifacts that
 fit in the data model of modern distributed version control systems.</p>
 <p>This includes the typical tree-like structure of a filesystem hierarchy,
