deploy: 7025247447030ca0aac22123f8ab79a29e1cf6e7

--- a/5_Core_identifiers/index.html
+++ b/5_Core_identifiers/index.html
@@ -205,7 +205,66 @@ of
 <a href="https://archive.softwareheritage.org/swh:1:dir:d198bc9d7a6bcf6db04f476d29314f157507d505">a directory containing the source code of the darktable photography application</a> as
 a given point in time of its development on May 4th 2017.</p>
 <h2 id="53-revisions">5.3 Revisions</h2>
-<p><em>TODO</em></p>
+<p>Software development within a specific project is essentially a time-indexed series of copies of a single “root” directory that contains the entire project source code. Software evolves when a developer modifies the content of one or more files in that directory and record their changes.</p>
+<p>Each recorded copy of the root directory is known as a “revision”. It points to a single fully-determined directory and is equipped with arbitrary metadata. Some of those are added manually by the developer (e.g., revision message), others are automatically synthesized (timestamps, parent revision(s), etc).</p>
+<p>The supported metadata is as follows:
+ - author (arbitrary byte sequence, mandatory): generally contains the name and email address of the author of the revision.
+ - author timestamp (decimal timestamp from the Unix epoch, mandatory): the date at which the revision was authored.
+ - author timezone offset (arbitrary byte sequence): UTC offset at which the revision was authored, usually an ASCII-encoded [+/-]HHMM specification.
+ - committer (arbitrary byte sequence, mandatory): generally contains the name and email address of the committer of the revision.
+ - committer timestamp (decimal timestamp from the Unix epoch, mandatory): the date at which the revision was committed.
+ - committer timezone offset (arbitrary byte sequence): UTC offset at which the revision was committed, usually an ASCII-encoded [+/-]HHMM specification.
+ - directory (mandatory): the root directory recorded by the revision (FIXME: is this really <em>meta</em>data?)
+ - parent revisions (ordered list of revisions): the immediately preceding revisions in the development timeline. Can be empty for an initial revision, and have multiple revisions when multiple branches of history are being merged.
+ - extra headers (ordered list of byte key/value pairs): arbitrary additional metadata attached to the revision (FIXME: add examples, add constraints)
+ - message: the message describing the revision</p>
+<p>In order to compute the intrinsic identifier of a revision, it is necessary to first compute the intrinsic identifier of the root directory recorded by the revision, as well as the intrinsic identifier of all parent revisions (recursively).</p>
+<p>The serialization of the revision is a sequence of lines in the following order:</p>
+<ul>
+<li>the reference to the root directory:</li>
+<li>the ASCII string <code>"tree"</code> (4 bytes)</li>
+<li>an ASCII space</li>
+<li>the ASCII-encoded hexadecimal intrinsic identifier of the directory (40 ASCII bytes)</li>
+<li>a LF</li>
+<li>for each parent revision, in the order they've been provided, a reference to that revision:</li>
+<li>the ASCII string <code>"parent"</code> (6 bytes)</li>
+<li>an ASCII space</li>
+<li>the ASCII-encoded hexadecimal intrinsic identifier of the parent revision (40 ASCII bytes)</li>
+<li>a LF</li>
+<li>the author line:</li>
+<li>the ASCII string <code>"author"</code> (6 bytes)</li>
+<li>an ASCII space</li>
+<li>the string of bytes provided for the author name and email, with each LF replaced by LF followed by an ASCII space</li>
+<li>an ASCII space</li>
+<li>the ASCII-encoded decimal representation of the author timestamp (TODO: expand what that means)</li>
+<li>an ASCII space</li>
+<li>the string of bytes provided for the author timezone offset, with each LF replaced by LF followed by an ASCII space</li>
+<li>a LF</li>
+<li>the committer line:</li>
+<li>the ASCII string <code>"committer"</code> (9 bytes)</li>
+<li>an ASCII space</li>
+<li>the string of bytes provided for the committer name and email, with each LF replaced by LF followed by an ASCII space</li>
+<li>an ASCII space</li>
+<li>the ASCII-encoded decimal representation of the committer timestamp (TODO: expand what that means)</li>
+<li>an ASCII space</li>
+<li>the string of bytes provided for the committer timezone offset, with each LF replaced by LF followed by an ASCII space</li>
+<li>a LF</li>
+<li>the extra header lines; for each provided key/value pair, in the order they have been provided:</li>
+<li>the key</li>
+<li>an ASCII space</li>
+<li>the value, with each LF replaced by LF followed by an ASCII space</li>
+<li>a LF</li>
+<li>if the message is defined:</li>
+<li>an extra LF (the message is separated from the header with two LFs)</li>
+<li>the commit message as a raw string of bytes</li>
+</ul>
+<p>The intrinsic identifier of the revision is the SHA1 of the of the byte sequence obtained by juxtaposing
+ - the ASCII string <code>"commit"</code> (without quotes),
+ - an ASCII space,
+ - the length of the previously obtained serialization as ASCII-encoded decimal digits,
+ - a NULL byte,
+ - and the previously obtained serialization.</p>
+<p>TODO: add example serializations</p>
 <p>As an example, <code>swh:1:rev:309cf2674ee7a0749978cf8265ab91a60aea0f7d</code> points to 
 <a href="https://archive.softwareheritage.org/swh:1:rev:309cf2674ee7a0749978cf8265ab91a60aea0f7d">a commit in the development history of Darktable</a>, dated 16 January 2017, that added undo/redo supports for masks.</p>
 <h2 id="54-releases">5.4 Releases</h2>
