--- a/5_Core_identifiers/index.html
+++ b/5_Core_identifiers/index.html
@@ -150,8 +150,8 @@ itself, as follows.</p>
 For this type of object the intrinsic identifier is the <code>sha1_git</code> hash of it,
 i.e. the SHA1 of the byte sequence obtained by juxtaposing
  - the ASCII string <code>"blob"</code> (without quotes),
- - a space,
- - the length of the content as decimal digits,
+ - an ASCII space,
+ - the length of the content as ASCII-encoded decimal digits,
  - a NULL byte,
  - and the actual content of the file.</p>
 <p>No metadata is used for this type of object (in particular, notice that there
@@ -159,46 +159,35 @@ is no file <em>name</em> mentioned here).</p>
 <p>As an example, <code>swh:1:cnt:94a9ed024d3859793618152ea559a168bbcbb5e2</code> is the SWHID computed from <a href="https://archive.softwareheritage.org/swh:1:cnt:94a9ed024d3859793618152ea559a168bbcbb5e2">the full text of the GPL3 license</a></p>
 <h2 id="52-directories">5.2 Directories</h2>
 <p>Directories are data structures commonly used in hierarchical file systems to group together files and other directories, and to hold relevant metadata about them, in the form of directory entries.</p>
-<p>This version of the SWHID standard adopts the same convention as the popular <em>git</em> version control system, and only takes into account as metadata the name of the directory entries and a simplified representation of the access rights.</p>
+<p>This version of the SWHID standard adopts the same convention as the popular <em>git</em> version control system, and only takes into account as metadata the name of the directory entries (as a sequence of arbitrary bytes, excluding ASCII '/' and the NULL byte) and a simplified representation of the access rights.</p>
+<p>The names of entries in a directory must be distinct from one another.</p>
 <p>In order to compute the intrinsic identifier of a directory, it is necessary to compute first the SWHID of each object listed in the directory.</p>
-<p><em>TODO</em>: make the following more formal</p>
-<p>Then one proceeds to create a textual representation of the directory as follows:</p>
+<p>Then one proceeds to create a serialization of the directory as follows:</p>
 <ol>
 <li>
-<p>for each <em>content</em> entry, with a given <em>name</em>, add a single line composed of</p>
-<ul>
-<li>the access rights, encoded as a sequence of six decimal digits,</li>
-<li>a space,</li>
-<li>the ASCII string <code>"blob"</code> (without quotes),</li>
-<li>a space,</li>
-<li>the <em>intrinsic identifier</em> of the <em>content</em></li>
-<li>a space,</li>
-<li>the <em>name</em> (encoded, how?) as a string (<em>TODO</em>: clarify)</li>
-<li>a line terminator</li>
-</ul>
+<p>sort the directory entries using the following algorithm</p>
+<ol>
+<li>for each entry pointing to a <em>directory</em>, append an ASCII '/' to its name</li>
+<li>sort all entries using the natural byte order of their (modified) name</li>
+</ol>
 </li>
 <li>
-<p>for each <em>directory</em> entry, with a given <em>name</em>, add a single line composed of</p>
-<ul>
-<li>the access rights, encoded as a sequence of six decimal digits,</li>
-<li>a space,</li>
-<li>the ASCII string <code>"tree"</code> (without quotes),</li>
-<li>a space,</li>
-<li>the <em>intrinsic identifier</em> of the <em>directory</em></li>
-<li>a space,</li>
-<li>the <em>name</em> (encoded, how?) as a string (<em>TODO</em>: clarify)</li>
-<li>a line terminator</li>
-</ul>
-</li>
-<li>
-<p>sort the lines using the following algorithm</p>
-<ul>
-<li><em>TODO</em> describe the sorting algorithm with all its quirks</li>
-</ul>
+<p>for each entry, with a given <em>name</em> (unmodified), add a sequence of bytes composed of</p>
+<ol>
+<li>the normalized access rights, encoded as a sequence of ASCII-encoded octal digits ('100644' for regular files, '100755' for executable files, '120000' for symbolic links, '40000' for directories),</li>
+<li>an ASCII space,</li>
+<li>the <em>name</em> as a raw string of bytes</li>
+<li>a NULL byte</li>
+<li>the <em>intrinsic identifier</em> of the <em>content</em> or <em>directory</em>, encoded as a sequence of 20 bytes</li>
+</ol>
 </li>
 </ol>
-<p>The intrinsic identifier of the directory is the <code>sha1_git</code> of the
-resulting textual representation.</p>
+<p>The intrinsic identifier of the directory is the SHA1 of the of the byte sequence obtained by juxtaposing
+ - the ASCII string <code>"tree"</code> (without quotes),
+ - an ASCII space,
+ - the length of the previously obtained serialization as ASCII-encoded decimal digits,
+ - a NULL byte,
+ - and the previously obtained serialization.</p>
 <p>As an example, <code>swh:1:dir:d198bc9d7a6bcf6db04f476d29314f157507d505</code> is the
 identifier
 of
